# dwell-agent

./: Cargo.toml  README.md  dwell-agent.toml  policy.toml
.github/workflows/: ci.yml
benches/: feature_extraction.rs  load_and_memory.rs
deploy/launchd/: com.dwell-agent.plist
deploy/systemd/: dwell-agent.service
deploy/windows/: install-service.ps1  uninstall-service.ps1
docs/: production-runbook.md
src/: actions.rs  baseline.rs  config.rs  events.rs  features.rs  ipc.rs  keystore.rs  lib.rs  main.rs  management.rs  monitoring.rs  policy.rs  risk.rs  webhook.rs
src/capture/: linux.rs  macos.rs  mod.rs  windows.rs
tests/: integration.rs
