[package]
name = "dwell-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
nalgebra = "0.33"
aes-gcm = "0.10"
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
notify = "6"
rand = "0.8"
thiserror = "1"
async-trait = "0.1"

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
