[package]
name = "dwell-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
nalgebra = "0.33"
aes-gcm = "0.10"
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
notify = "6"
rand = "0.8"
thiserror = "1"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }

[[bench]]
name = "feature_extraction"
harness = false

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.23", features = ["highsierra"] }
core-foundation = "0.9"
core-foundation-sys = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
